Fix 2d/3d toggle way too large on large screens

--- a/newIDE/app/src/UI/CompactToggleButtons/CompactToggleButtons.module.css
+++ b/newIDE/app/src/UI/CompactToggleButtons/CompactToggleButtons.module.css
@@ -2,8 +2,11 @@
   display: flex;
   align-items: center;
   background-color: var(--theme-text-field-default-background-color);
-  flex: 1;
   border-radius: 4px;
+}
+
+.containerExpand {
+  flex: 1;
 }
 
 .compactToggleButton {
